questions for types and operators

--- a/pages/types-and-operators/index.html
+++ b/pages/types-and-operators/index.html
@@ -17,6 +17,7 @@
     <script src="../../data/nav-bar-data.js"></script>
     <script src="../../data/types-and-operators-data.js"></script>
     <script defer src="../../helpers/data-retriever.js"></script>
+    <script src="../../helpers/iframe-creator.js"></script>
     <script src="../../helpers/element-creator.js"></script>
     <script src="../../helpers/misc.js"></script>
     <script src="../../ui-builders/nav-bar-builder.js"></script>
