--- a/pages/execution-context/index.html
+++ b/pages/execution-context/index.html
@@ -22,6 +22,7 @@
         </ul>
     </footer>
 
+    <script src="../../helpers/gtm.js"></script>
     <script src="../../data/nav-bar-data.js"></script>
     <script src="../../data/execution-context-data.js"></script>
     <script defer src="../../helpers/data-retriever.js"></script>
