--- a/pages/objects-and-functions/index.html
+++ b/pages/objects-and-functions/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../shared-styles.css">
-    <title>Types and Operators</title>
+    <title>Objects and Functions</title>
 </head>
 <body>
-    <h1 class="header">Execution Context and Lexical Environments</h1>
+    <h1 class="header">Objects and Functions</h1>
     <nav class="nav-container"></nav>
     <section class="main-content"></section>
     <section class="quiz-container"></section>
@@ -16,14 +16,13 @@
     
     <script src="../../helpers/gtm.js"></script>
     <script src="../../data/nav-bar-data.js"></script>
-    <script src="../../data/types-and-operators-data.js"></script>
-    <script defer src="../../helpers/data-retriever.js"></script>
+    <!-- <script defer src="../../helpers/data-retriever.js"></script> -->
     <script src="../../helpers/iframe-creator.js"></script>
     <script src="../../helpers/element-creator.js"></script>
     <script src="../../helpers/misc.js"></script>
     <script src="../../ui-builders/nav-bar-builder.js"></script>
-    <script defer src="../../ui-builders/main-content-builder.js"></script>
-    <script defer src="../../ui-builders/quiz-builder.js"></script>
+    <!-- <script defer src="../../ui-builders/main-content-builder.js"></script> -->
+    <!-- <script defer src="../../ui-builders/quiz-builder.js"></script> -->
     <script src="test-env.js"></script>
 </body>
 </html>
