--- a/pages/terminology/index.html
+++ b/pages/terminology/index.html
@@ -14,6 +14,7 @@
     <section class="main-content"></section>
     <section class="quiz-container"></section>
 
+    <script src="../../helpers/gtm.js"></script>
     <script src="../../data/nav-bar-data.js"></script>
     <script src="../../data/terminology-data.js"></script>
     <script defer src="../../helpers/data-retriever.js"></script>
