--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <section class="main-content"></section>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QDSJXD4Z68"></script>
     <script src="../../helpers/gtm.js"></script>
     <script src="data/nav-bar-data.js"></script>
     <script src="ui-builders/nav-bar-builder.js"></script>
