--- a/pages/types-and-operators/index.html
+++ b/pages/types-and-operators/index.html
@@ -14,6 +14,7 @@
     <section class="quiz-container"></section>
 
     
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QDSJXD4Z68"></script>
     <script src="../../helpers/gtm.js"></script>
     <script src="../../data/nav-bar-data.js"></script>
     <script src="../../data/types-and-operators-data.js"></script>
