added objects and functions

--- a/pages/objects-and-functions/index.html
+++ b/pages/objects-and-functions/index.html
@@ -15,14 +15,16 @@
 
     
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QDSJXD4Z68"></script>
+    <script src="../../underscore.js"></script>
     <script src="../../helpers/gtm.js"></script>
     <script src="../../data/nav-bar-data.js"></script>
-    <!-- <script defer src="../../helpers/data-retriever.js"></script> -->
+    <script src="../../data/objects-and-functions-data.js"></script>
+    <script defer src="../../helpers/data-retriever.js"></script>
     <script src="../../helpers/iframe-creator.js"></script>
     <script src="../../helpers/element-creator.js"></script>
     <script src="../../helpers/misc.js"></script>
     <script src="../../ui-builders/nav-bar-builder.js"></script>
-    <!-- <script defer src="../../ui-builders/main-content-builder.js"></script> -->
+    <script defer src="../../ui-builders/main-content-builder.js"></script>
     <!-- <script defer src="../../ui-builders/quiz-builder.js"></script> -->
     <script src="test-env.js"></script>
 </body>
